--- a/src/app/component/keyboard/keyboard.component.scss
+++ b/src/app/component/keyboard/keyboard.component.scss
@@ -39,6 +39,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border-color: var(--letter-color2);
+  color: var(--letter-color2);
 }
 
 #oddKeyboard {
